--- a/ConwayGameOfLifeKata/build.xml
+++ b/ConwayGameOfLifeKata/build.xml
@@ -25,7 +25,7 @@
 		<mkdir dir="${bin.dir.resources}"/>
 		<copy todir="${bin.dir}">
     		<fileset dir="resources"
-        		     includes="**/*.xml,**/*.properties,**/*.txt,**/*.ico" />
+        		     includes="**/*.xml,**/*.properties,**/*.txt,**/*.ico,**/*js" />
 		</copy>
 		<copy todir="${bin.dir.lib}">
 			<fileset dir="lib"/>
